--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "makeData": "node scripts/makeData.js"
   },
   "devDependencies": {
+    "@open-wc/rollup-plugin-html": "^1.2.5",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
