--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "console-table-printer": "^2.7.5",
     "dotenv": "^8.2.0",
     "got": "^11.8.1",
+    "iconv-lite": "^0.4.24",
     "jest": "^26.6.3",
     "mustache": "^4.1.0",
     "papaparse": "^5.3.0",
