--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "svelte-preprocess-markdown": "^2.7.3"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "workbox-window": "^5.1.4"
   }
 }
