--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,3 +3,8 @@ image: gitpod/workspace-full
 tasks:
   - init: npm install && npm run build
     command: npm run start
+
+vscode:
+  extensions:
+    - svelte.svelte-vscode@104.0.0:bCbDpi01c0Qt+pqOeQV7Sw==
+    - bierner.markdown-preview-github-styles@0.1.6:7Xkp16X2MuWg//+162XzKw==
