--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 image: gitpod/workspace-full
 
 tasks:
-  - init: npm install && npm run build
+  - init: npm ci && npm run build && npm run test
     command: npm run start
 
 vscode:
