--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "got": "^11.8.1",
     "iconv-lite": "^0.4.24",
     "jest": "^26.6.3",
+    "md-2-json": "^2.0.0",
     "mustache": "^4.1.0",
     "papaparse": "^5.3.0",
     "rimraf": "^3.0.2",
