--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flytax",
-  "version": "1.3.5",
+  "version": "1.3.6",
+  "patchVersion": "b",
   "type": "module",
   "scripts": {
     "build": "rollup -c",
